--- a/changeLog.html
+++ b/changeLog.html
@@ -130,14 +130,20 @@
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Physik:Astronomische Daten, Auftrieb,
-                Doppler-Effekt, Druck, Grundlagen der Physik,Hook'sches Gesetz,
+                Doppler-Effekt, Druck, Grundlagen der Physik, Hook'sches Gesetz,
                 Stehende Wellen
               </li>
               <li class="changeLogText">
-                Neit Kapitel an der Physik: Elektrische Stromkreis
+                Neit Kapitel an der Elektrotechnik: Elektrische Stromkreis
+              </li>
+              <li class="changeLogText">
+                Kapitel: Ohm'sches Gesetz gouf gestrach
               </li>
               <li class="changeLogText">
                 Ergänzungen am Kapitel: Mechanische Wellen
+              </li>
+              <li class="changeLogText">
+                Annex Chimie, am Fach Divers ass elo ërem am Fach Chimie
               </li>
               <li class="changeLogText">Neie Stil: Pastel, Patriot</li>
               <li class="changeLogText">
