--- a/Chemie/molareStandard-Bildungsenthalpien.html
+++ b/Chemie/molareStandard-Bildungsenthalpien.html
@@ -3,19 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <script src="../../assets/insertDiversHTML.js"></script>
-    <script src="../../assets/mathJax.js"></script>
+    <script src="../assets/insertChapterHTML.js"></script>
+    <script src="../assets/mathJax.js"></script>
+
     <script
       type="text/javascript"
       id="MathJax-script"
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
     ></script>
-    <script defer src="../../feedbackPopup.js"></script>
-    <script defer src="../../print.js"></script>
-    <script async src="../../assets/settingsDivers.js"></script>
+    <script defer src="../feedbackPopup.js"></script>
+    <script defer src="../print.js"></script>
+    <script async src="../Themes JavaScript/themeChapter.js"></script>
 
-    <title>Molare Standard Entropien</title>
+    <title>Molare standard Bildungsenthalpien</title>
   </head>
   <body>
     <my-navigator></my-navigator>
@@ -23,7 +24,8 @@
       <p id="printWatermark"></p>
       <h1>DHWerte</h1>
       <a href="dhWerte.html">Alle DH-Werte</a>
-      <h2>Molare Standard Entropien</h2>
+      <h2>Molare Standard - Bildungsenthalpien</h2>
+
       <table>
         <tr>
           <th>$$Reinstoff$$</th>
