--- a/Chemie/redoxtabelle.html
+++ b/Chemie/redoxtabelle.html
@@ -3,17 +3,18 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <script src="../../assets/insertDiversHTML.js"></script>
-    <script src="../../assets/mathJax.js"></script>
+    <script src="../assets/insertChapterHTML.js"></script>
+    <script src="../assets/mathJax.js"></script>
+
     <script
       type="text/javascript"
       id="MathJax-script"
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
     ></script>
-    <script defer src="../../feedbackPopup.js"></script>
-    <script defer src="../../print.js"></script>
-    <script async src="../../assets/settingsDivers.js"></script>
+    <script defer src="../feedbackPopup.js"></script>
+    <script defer src="../print.js"></script>
+    <script async src="../Themes JavaScript/themeChapter.js"></script>
 
     <title>Redoxtabelle</title>
   </head>
