--- a/changeLog.html
+++ b/changeLog.html
@@ -126,7 +126,7 @@
               </li>
             </ul> -->
             <h3>Update 52</h3>
-            <time>.2024</time>
+            <time>.4.2024</time>
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Physik:Astronomische Daten, Auftrieb,
@@ -135,6 +135,10 @@
               </li>
               <li class="changeLogText">
                 Neit Kapitel an der Elektrotechnik: Elektrische Stromkreis
+              </li>
+              <li class="changeLogText">
+                Neit Programm: Fonctions du deuxieme degrée, wou automatesch
+                Equatioune vum zweete Grad ka leisen
               </li>
               <li class="changeLogText">
                 Kapitel: Ohm'sches Gesetz gouf gestrach
