--- a/Archiv/Informatik/index.html
+++ b/Archiv/Informatik/index.html
@@ -30,6 +30,42 @@
             </li>
           </ul>
         </li>
+        <li>
+          <p><u>Dessin et graphisme</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Dessin et graphisme/Bouger une tortue.pdf"
+                >Bouger une tortue</a
+              >
+            </li>
+            <li>
+              <a href="pdf/Dessin et graphisme/Bouger plusieurs tortues.pdf"
+                >Bouger plusieurs tortues</a
+              >
+            </li>
+            <li>
+              <a href="pdf/Dessin et graphisme/Tortues en couleur.pdf"
+                >Tortues en couleur</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <p><u>Événements de la souris</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Evenements de la souris/Traceur de lignes 1.pdf"
+                >Traceur de lignes 1</a
+              >
+            </li>
+            <li>
+              <a
+                href="pdf/Evenements de la souris/Traceur de lignes en couleur.pdf"
+                >Traceur de lignes en couleur</a
+              >
+            </li>
+          </ul>
+        </li>
 
         <li>
           <p><u>La classe Timer</u></p>
