--- a/Physik/index.html
+++ b/Physik/index.html
@@ -122,13 +122,24 @@
           >
         </li>
       </ol>
-      <h2>Thermodynamik</h2>
+      <h2>Thermodynamik, Wellenlehre</h2>
       <ol>
         <li>
           <a href="gasGesetze.html" class="indexLink">Gasgesetze</a>
         </li>
         <li>
           <a href="kalirometrie.html" class="indexLink">Kalirometrie</a>
+        </li>
+        <li>
+          <a href="laengenausdehnung.html" class="indexLink"
+            >Längenausdehnung</a
+          >
+        </li>
+        <li>
+          <a href="temperatur.html" class="indexLink">Temperatur</a>
+        </li>
+        <li>
+          <a href="volumenaenderung.html" class="indexLink">Volumenänderung</a>
         </li>
       </ol>
       <h2>Wellenlehre</h2>
