--- a/changeLog.html
+++ b/changeLog.html
@@ -144,6 +144,11 @@
                 Kapitel: Ohm'sches Gesetz gouf gestrach
               </li>
               <li class="changeLogText">
+                Nei Exercicer: <br />
+                Bouger une tortue, Bouger plusieurs tortues, Tortue en couleur,
+                Tracer des lignes 1, Tracer des lignes en couleur
+              </li>
+              <li class="changeLogText">
                 Ergänzungen am Kapitel: Mechanische Wellen
               </li>
               <li class="changeLogText">
