--- a/changeLog.html
+++ b/changeLog.html
@@ -126,20 +126,17 @@
               </li>
             </ul> -->
             <h3>Update 52</h3>
-            <time>.4.2024</time>
+            <time>6.4.2024</time>
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Physik:Astronomische Daten, Auftrieb,
                 Doppler-Effekt, Druck, Grundlagen der Physik, Hook'sches Gesetz,
-                Stehende Wellen
+                Stehende Wellen, Längenausdehnung, Temperatur, Volumenänderung
               </li>
               <li class="changeLogText">
                 Neit Kapitel an der Elektrotechnik: Elektrische Stromkreis
               </li>
-              <li class="changeLogText">
-                Neit Programm: Fonctions du deuxieme degrée, wou automatesch
-                Equatioune vum zweete Grad ka leisen
-              </li>
+
               <li class="changeLogText">
                 Kapitel: Ohm'sches Gesetz gouf gestrach
               </li>
@@ -157,9 +154,6 @@
               <li class="changeLogText">Neie Stil: Pastel, Patriot</li>
               <li class="changeLogText">
                 Tabelle passen sech elo dem Content un
-              </li>
-              <li class="changeLogText">
-                Formelen sinn elo an enger méi grousser Schrëft geschriwwen
               </li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
