--- a/Programmen/converter.html
+++ b/Programmen/converter.html
@@ -34,7 +34,7 @@
           <div class="converter-side-a">
             <form name="form_A" onSubmit="return false">
               <input
-                type="text"
+                type="number"
                 class="numbersonly"
                 name="unit_input"
                 maxlength="20"
@@ -55,7 +55,7 @@
           <div class="converter-side-b">
             <form name="form_B" onSubmit="return false">
               <input
-                type="text"
+                type="number"
                 class="numbersonly"
                 name="unit_input"
                 maxlength="20"
