--- a/changeLog.html
+++ b/changeLog.html
@@ -125,6 +125,15 @@
                 Schaltungsentwurf, Schaltnetze
               </li>
             </ul> -->
+            <h3>Update 53</h3>
+            <time>7.4.2024</time>
+            <ul>
+              <li class="changeLogText">
+                De Converter ënnerstetzt elo Kommazuelen, Temperaturen an
+                Exposanten vun 10!
+              </li>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
             <h3>Update 52</h3>
             <time>6.4.2024</time>
             <ul>
