--- a/Programmen/converter.html
+++ b/Programmen/converter.html
@@ -7,7 +7,7 @@
     <script defer src="../feedbackPopup.js"></script>
     <script defer src="../print.js"></script>
     <script async src="../Themes JavaScript/themeChapter.js"></script>
-    <script defer src="converter.js"></script>
+    <script defer src="converter-code.js"></script>
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/converter.css" />
