--- a/Programmen/index.html
+++ b/Programmen/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" dir="ltr">
+<html lang="lb" dir="ltr">
   <head>
     <meta http-equiv="cache-control" content="max-age=43200" />
     <meta charset="utf-8" />
@@ -31,12 +31,10 @@
           >
         </li>
         <li>
-          <a href="randomNummer.html" class="indexLink">Zoufälleg Zuel</a>
+          <a href="zoufallsZuel.html" class="indexLink">Zoufalls Zuel</a>
         </li>
         <li>
-          <a href="../Calculator/calculator.html" class="indexLink"
-            >Rechemaschinn</a
-          >
+          <a href="calculator.html" class="indexLink">Rechemaschinn</a>
         </li>
         <li>
           <a href="converter.html" class="indexLink">Converter</a>
@@ -51,7 +49,26 @@
             >Wichteg dichteg Wëssenschaftler</a
           >
         </li>
+        <li>
+          <a href="volumesAiresPerimetre.html" class="indexLink"
+            >Geometrie Rechemaschinn</a
+          >
+        </li>
+        <li>
+          <a href="gcdFannen.html" class="indexLink">GCD Fannen</a>
+        </li>
       </ol>
     </div>
+    <footer id="footer">
+      <p class="footerTextColor">
+        luxformel.info <br />
+        <br />
+        Designed by: <br />
+        Niederkorn Damon <br />
+        <br />
+        E-mail: <br />
+        feedback@luxformel.info
+      </p>
+    </footer>
   </body>
 </html>
