--- a/changeLog.html
+++ b/changeLog.html
@@ -125,6 +125,24 @@
                 Schaltungsentwurf, Schaltnetze
               </li>
             </ul> -->
+            <h3>Update 54</h3>
+            <time>4.2024</time>
+            <ul>
+              <li class="changeLogText">
+                An Programmen gouf: Diviseure vun enger Zuel, Zoufalls Zuel,
+                Rechemaschinn, verbessert
+              </li>
+              <li class="changeLogText">
+                Wichteg dicheg Wëssenschaftler passt sech elo besser un
+                d'Astellungen unn
+              </li>
+              <li class="changeLogText">
+                Neit Programm: Geometrie Rechemaschinn
+              </li>
+              <li class="changeLogText">
+                Footer ass elo op méi Plaazen an ass ëmmer ënnen
+              </li>
+            </ul>
             <h3>Update 53</h3>
             <time>7.4.2024</time>
             <ul>
