--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -79,5 +79,16 @@
         </table>
       </div>
     </div>
+    <footer id="footer">
+      <p class="footerTextColor">
+        luxformel.info <br />
+        <br />
+        Designed by: <br />
+        Niederkorn Damon <br />
+        <br />
+        E-mail: <br />
+        feedback@luxformel.info
+      </p>
+    </footer>
   </body>
 </html>
