--- a/Messtechnik/index.html
+++ b/Messtechnik/index.html
@@ -22,5 +22,16 @@
         </li>
       </ol>
     </div>
+    <footer id="footer">
+      <p class="footerTextColor">
+        luxformel.info <br />
+        <br />
+        Designed by: <br />
+        Niederkorn Damon <br />
+        <br />
+        E-mail: <br />
+        feedback@luxformel.info
+      </p>
+    </footer>
   </body>
 </html>
