--- a/Physik/index.html
+++ b/Physik/index.html
@@ -182,5 +182,16 @@
         Artikel.
       </p>
     </div>
+    <footer id="footer">
+      <p class="footerTextColor">
+        luxformel.info <br />
+        <br />
+        Designed by: <br />
+        Niederkorn Damon <br />
+        <br />
+        E-mail: <br />
+        feedback@luxformel.info
+      </p>
+    </footer>
   </body>
 </html>
