--- a/Programmen/diviseureFannen.html
+++ b/Programmen/diviseureFannen.html
@@ -4,19 +4,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <script src="../assets/insertChapterHTML.js"></script>
-    <script
-      type="text/javascript"
-      id="MathJax-script"
-      async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
-    ></script>
     <script defer src="../feedbackPopup.js"></script>
     <script defer src="../print.js"></script>
     <script async src="../Themes JavaScript/themeChapter.js"></script>
+    <script defer src="javascript/geometry-caculator.js"></script>
 
+    <link rel="stylesheet" href="../css/resetStyleSheet.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="progra.css" />
-
     <title>Diviseure Sichen</title>
+
+    <style>
+      /* Additional CSS for styling */
+      .container {
+        max-width: 600px;
+        margin: 0 auto;
+        margin-top: 4rem;
+        padding: 20px;
+      }
+      .main-wrapper {
+        background-color: var(--white);
+        border-radius: 10px;
+        box-shadow: 0 0 10px var(--black);
+        padding: 20px;
+      }
+      .center-wrapper {
+        text-align: center;
+      }
+      h1 {
+        font-size: 24px;
+        margin-bottom: 20px;
+      }
+      .number-input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid var(--darker-greyColor);
+        border-radius: 5px;
+        box-sizing: border-box;
+      }
+      .btn {
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        background-color: var(--accentColor);
+        color: var(--white);
+        border: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+      }
+      .btn:hover {
+        opacity: 0.8;
+      }
+      .output-textarea {
+        width: 100%;
+        height: 150px;
+        padding: 10px;
+        margin-top: 10px;
+        border: 1px solid var(--darker-greyColor);
+        border-radius: 5px;
+        resize: vertical;
+      }
+    </style>
   </head>
   <body>
     <my-navigator></my-navigator>
@@ -30,43 +79,35 @@
               type="number"
               name="zuel"
               id="divZuel"
+              placeholder="Enter a number"
             />
             <div class="q100">
               <button class="btn" type="button" onclick="getDiv()">
                 Diviseure Sichen
               </button>
             </div>
-            <textarea id="output" class="output-textarea"></textarea>
+            <textarea
+              id="output"
+              class="output-textarea"
+              placeholder="Result will appear here"
+              readonly
+            ></textarea>
           </form>
         </div>
       </div>
       <script>
         function getDiv() {
           let number = document.getElementById("divZuel").value;
-          let resultList = new Array();
-          //console.log(number);
-          //2 for schläifen mat enger mat nemmen negativen zuelen an eng mat positiven?
+          let resultList = [];
           for (var i = -1 * number; i <= number; i++) {
             let testNumber = number % i;
             if (testNumber == 0) {
               resultList.push(number / i);
             }
           }
-          //console.table(resultList);
-          document.getElementById("output").innerHTML = resultList;
+          document.getElementById("output").value = resultList.join(", ");
         }
       </script>
-      <footer id="footer">
-        <p class="footerTextColor">
-          luxformel.info <br />
-          <br />
-          Designed by: <br />
-          Niederkorn Damon <br />
-          <br />
-          E-mail: <br />
-          feedback@luxformel.info
-        </p>
-      </footer>
     </div>
   </body>
 </html>
