--- a/Divers/alphabet.html
+++ b/Divers/alphabet.html
@@ -66,6 +66,11 @@
         </tr>
 
         <tr>
+          <td>&Eta;</td>
+          <td>$\eta$</td>
+          <td>eta</td>
+        </tr>
+        <tr>
           <td>$\Theta$</td>
           <td>$\theta$</td>
           <td>theta</td>
