--- a/Mathe/index.html
+++ b/Mathe/index.html
@@ -15,24 +15,72 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Mathématiques</h1>
-      <h2></h2>
-      <ol class="orederedListIndex">
-        <li><a href="limites.html" class="indexLink">Limites</a></li>
+      <h2>Algèbre</h2>
+      <ol>
+        <li>
+          <a href="elementsdArithmetique.html" class="indexLink">
+            Eléments d'arithmétique
+          </a>
+        </li>
         <li>
           <a href="nombresComplexes.html" class="indexLink"
             >Nombres Complexes</a
           >
         </li>
         <li>
+          <a href="puissancesEtReglesDePriorite.html" class="indexLink">
+            Puissances et règles de priorité
+          </a>
+        </li>
+      </ol>
+
+      <h2>Analyse</h2>
+      <ol>
+        <li>
+          <a href="continuite.html" class="indexLink"> Continuité </a>
+        </li>
+        <li>
           <a href="derivation.html" class="indexLink">Dérivation</a>
         </li>
         <li>
-          <a href="tableauDesFonctionsDerivees.html" class="indexLink"
-            >Tableau des fonctions dérivées</a
-          >
+          <a href="integration.html" class="indexLink"> Intégration</a>
+        </li>
+        <li><a href="limites.html" class="indexLink">Limites</a></li>
+      </ol>
+
+      <h2>Fonction</h2>
+      <ol>
+        <li>
+          <a href="fonctionExponentielle.html" class="indexLink">
+            Fonction exponentielle
+          </a>
         </li>
         <li>
-          <a href="probabilites.html" class="indexLink">Probabilités</a>
+          <a href="ln.html" class="indexLink">Fonction logarithme népérien</a>
+        </li>
+      </ol>
+
+      <h2>Géométrie</h2>
+      <ol>
+        <li>
+          <a href="conditionsMathematiques.html" class="indexLink">
+            Conditions Mathématiques utiles
+          </a>
+        </li>
+        <li>
+          <a href="geometrieDanslespace.html" class="indexLink">
+            Géométrie dans l'espace
+          </a>
+        </li>
+        <li>
+          <a href="theoremeDeThales.html" class="indexLink">
+            Théorème de Thalès
+          </a>
+        </li>
+        <li>
+          <a href="theoremeDePythagore.html" class="indexLink">
+            Théorème de Pythagore
+          </a>
         </li>
         <li>
           <a href="trigonometrie.html" class="indexLink">Trigonométrie</a>
@@ -43,13 +91,54 @@
           </a>
         </li>
         <li>
-          <a href="puissancesEtReglesDePriorite.html" class="indexLink">
-            Puissances et règles de priorité
+          <a href="trigonometrieDansUnTriangleRectalge.html" class="indexLink">
+            Trigonomètrie dans un triangle rectangle
           </a>
         </li>
         <li>
-          <a href="elementsdArithmetique.html" class="indexLink">
-            Eléments d'arithmétique
+          <a href="vecteurs.html" class="indexLink">Vecteurs</a>
+        </li>
+        <li>
+          <a href="vecteursDansLePlan.html" class="indexLink">
+            Vecteurs dans le plan
+          </a>
+        </li>
+      </ol>
+
+      <h2>Logique</h2>
+      <ol>
+        <li>
+          <a href="demonstrations.html" class="indexLink"> Démonstrations</a>
+        </li>
+        <li>
+          <a href="logiqueElementaire.html" class="indexLink">
+            Logique Élémentaire
+          </a>
+        </li>
+      </ol>
+
+      <h2>Probabilité</h2>
+      <ol>
+        <li>
+          <a href="probabilites.html" class="indexLink">Probabilités</a>
+        </li>
+      </ol>
+
+      <h2>Théorie des nombres</h2>
+      <ol>
+        <li>
+          <a href="ensemblesDesNombres.html" class="indexLink">
+            Ensembles des Nombres
+          </a>
+        </li>
+      </ol>
+
+      <hr />
+      <h2>Tableau</h2>
+      <ul>
+        <li>
+          <a href="collectionDesFormulesGeometrique.html" class="indexLink">
+            Collection des formules des figures géométriques
           </a>
         </li>
         <li>
@@ -61,76 +150,17 @@
           </a>
         </li>
         <li>
-          <a href="collectionDesFormulesGeometrique.html" class="indexLink">
-            Collection des formules des figures géometriques
-          </a>
-        </li>
-        <li>
-          <a href="conditionsMathematiques.html" class="indexLink">
-            Conditions Mathématiques utiles
-          </a>
-        </li>
-        <li>
-          <a href="continuite.html" class="indexLink"> Continuité </a>
-        </li>
-        <li>
-          <a href="fonctionExponentielle.html" class="indexLink">
-            Fonction exponentielle
-          </a>
-        </li>
-        <li>
-          <a href="ln.html" class="indexLink">Fonction logarithme népérien</a>
-        </li>
-        <li>
-          <a href="ensemblesDesNombres.html" class="indexLink">
-            Ensembles des Nombres
-          </a>
-        </li>
-        <li>
-          <a href="vecteursDansLePlan.html" class="indexLink">
-            Vecteurs dans le plan
-          </a>
-        </li>
-        <li>
-          <a href="geometrieDanslespace.html" class="indexLink">
-            Géométrie dans l'espace
-          </a>
-        </li>
-        <li>
-          <a href="theoremeDePythagore.html" class="indexLink">
-            Théorème de Pythagore
-          </a>
-        </li>
-        <li>
-          <a href="theoremeDeThales.html" class="indexLink">
-            Théorème de Thalès
-          </a>
-        </li>
-        <li>
-          <a href="trigonometrieDansUnTriangleRectalge.html" class="indexLink">
-            Trigonomètrie dans un triangle rectangle
-          </a>
-        </li>
-        <li>
-          <a href="integration.html" class="indexLink"> Intégration</a>
-        </li>
-        <li>
-          <a href="logiqueElementaire.html" class="indexLink">
-            Logique Élémentaire
-          </a>
-        </li>
-        <li>
-          <a href="demonstrations.html" class="indexLink"> Démonstrations</a>
-        </li>
-        <li>
-          <a href="vecteurs.html" class="indexLink">Vecteurs</a>
+          <a href="tableauDesFonctionsDerivees.html" class="indexLink"
+            >Tableau des fonctions dérivées</a
+          >
         </li>
         <li>
           <a href="tableauDesPrimitivesDeFonctions.html" class="indexLink"
             >Tableau des primitives de fonction</a
           >
         </li>
-      </ol>
+      </ul>
+
       <!-- <h3>Bemierkung</h3>
       <p>
         Sortéiert no
