--- a/Programmen/diviseureFannen.html
+++ b/Programmen/diviseureFannen.html
@@ -79,7 +79,7 @@
               type="number"
               name="zuel"
               id="divZuel"
-              placeholder="Enter a number"
+              placeholder="Schreift Är Zuel"
             />
             <div class="q100">
               <button class="btn" type="button" onclick="getDiv()">
@@ -89,7 +89,7 @@
             <textarea
               id="output"
               class="output-textarea"
-              placeholder="Result will appear here"
+              placeholder="Lëscht vu Resultater"
               readonly
             ></textarea>
           </form>
