--- a/Programmen/index.html
+++ b/Programmen/index.html
@@ -57,6 +57,14 @@
         <li>
           <a href="gcdFannen.html" class="indexLink">GCD Fannen</a>
         </li>
+        <li>
+          <a href="derivee.html" class="indexLink">Dérivéeë Rechnen</a>
+        </li>
+        <li>
+          <a href="equatiouneLeisen.html" class="indexLink"
+            >Equatioune Léisen</a
+          >
+        </li>
       </ol>
     </div>
     <footer id="footer">
