--- a/Programmen/gcdFannen.html
+++ b/Programmen/gcdFannen.html
@@ -66,6 +66,9 @@
       button:hover {
         opacity: 0.8;
       }
+      #gcd {
+        color: var(--black);
+      }
     </style>
   </head>
   <body>
