--- a/changeLog.html
+++ b/changeLog.html
@@ -126,7 +126,7 @@
               </li>
             </ul> -->
             <h3>Update 54</h3>
-            <time>4.2024</time>
+            <time>.4.2024</time>
             <ul>
               <li class="changeLogText">
                 An Programmen gouf: Diviseure vun enger Zuel, Zoufalls Zuel,
@@ -137,11 +137,17 @@
                 d'Astellungen unn
               </li>
               <li class="changeLogText">
-                Neit Programm: Geometrie Rechemaschinn
+                Neit Programm: Geometrie Rechemaschinn, Dérivéeë Rechnen
               </li>
+              <li class="changeLogText">
+                De Buchstaf Eta: &eta;, ass och elo an der Tabelle: Alphabet, am
+                Divers
+              </li>
+              <li class="changeLogText">Mathe gouf sortéiert</li>
               <li class="changeLogText">
                 Footer ass elo op méi Plaazen an ass ëmmer ënnen
               </li>
+              <li class="changeLogText">Nei Spréch!</li>
             </ul>
             <h3>Update 53</h3>
             <time>7.4.2024</time>
